Update field to Match requirements
- update create form fields from status to stage
- added start date field to the task model
- update field in frontend form

--- a/project_management_app/project_task/templates/project_task/project_backlog.html
+++ b/project_management_app/project_task/templates/project_task/project_backlog.html
@@ -120,7 +120,7 @@
                         {{ form.description| as_crispy_field}}
                         {{ form.story_point| as_crispy_field}}
                         {{ form.tags| as_crispy_field}}
-                        {{ form.status| as_crispy_field}}
+                        {{ form.stage | as_crispy_field}}
                     </div>
                 </div>
 
