--- a/project_management_app/project_task/templates/project_task/pb_card_view.html
+++ b/project_management_app/project_task/templates/project_task/pb_card_view.html
@@ -3,7 +3,7 @@
     <div class="row">
         {% for task in tasks %}
         <!-- Create a card for each task -->
-        <div class="col-sm-3">
+        <div class="col-sm-3" id="task-card-{{ task.id }}">
             <div class="card mb-3" style="height: 13rem;">
                 <div class="card-body">
                     <h4 class="card-title">
@@ -22,14 +22,14 @@
                     </div>
                 </div>
                 <div class="card-footer">
-                    <a href="{% url 'delete_task' task.id %}" class="btn btn-danger delete-btn">Delete</a>
+                    <button type="submit" class="btn btn-danger delete-btn" data-task-id="{{ task.id }}">Delete</button>
                 </div>
             </div>
         </div>
 
         {% empty %}
         <!-- If no tasks are available -->
-        <div class="col-12 text-center">
+        <div class="col-12 text-center" id="task-card-empty">
             <p class="mt-5">No tasks available.</p>
         </div>
         {% endfor %}
