--- a/project_management_app/project_task/templates/project_task/project_backlog.html
+++ b/project_management_app/project_task/templates/project_task/project_backlog.html
@@ -34,58 +34,7 @@
 
 
 <!-- View options and Create New Task button -->
-<div class="container-fluid mb-4 mt-4">
-    <div class="row">
-        <!-- View options -->
-        <div class="col-sm-2">
-            <label for="view">View:</label>
-            <select id="view" onchange="updateSortAndFilter()">
-                {% if current_view == 'list_view' %}
-                <option value="list_view" selected>List View</option>
-                <option value="card_view">Card View</option>
-                {% else %}
-                <option value="list_view">List View</option>
-                <option value="card_view" selected>Card View</option>
-                {% endif %}
-            </select>
-        </div>
-
-        <!-- Priority Sort options -->
-        <div class="col-sm-2">
-            <label for="priority_sort">Priority:</label>
-            <select id="priority_sort" onchange="updateSortAndFilter()">
-                {% if priority_sort == 'priority_ascending' %}
-                <option value="priority_ascending" selected>Ascending</option>
-                <option value="priority_descending">Descending</option>
-                {% else %}
-                <option value="priority_ascending">Ascending</option>
-                <option value="priority_descending" selected>Descending</option>
-                {% endif %}
-            </select>
-        </div>
-
-        <!-- Tags Filter options -->
-        <div class="col-sm-6 d-flex justify-content-start">
-            <label for="tags_filter">Tags:</label>
-            <select id="tags_filter" multiple="multiple" style="width: 50%" onchange="updateSortAndFilter()">
-                {% for tag in tags %}
-                {% if tag.name in selected_tags %}
-                <option value="{{ tag.name }}" selected>{{ tag.name }}</option>
-                {% else %}
-                <option value="{{ tag.name }}">{{ tag.name }}</option>
-                {% endif %}
-                {% endfor %}
-            </select>
-        </div>
-
-        <!-- Create New Task Button trigger modal -->
-        <div class="col-sm-2 text-right" id="create-task-listview">
-            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#createNewTask">create new
-                task
-            </button>
-        </div>
-    </div>
-</div>
+{% include "project_task/pb_view_filtersort_button.html" %}
 
 <!-- View templates -->
 {% if current_view == 'list_view' %}
@@ -97,43 +46,7 @@
 {% endif %}
 
 <!-- Create New Task Modal -->
-<div class="modal fade" id="createNewTask" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-     aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <form id="taskForm" method="POST">
-                {% csrf_token %}
-                <!-- Modal Header -->
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Create New Task</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-
-                <!-- Modal Body -->
-                <div class="modal-body">
-                    <div class="d-grid gap-3 text-start">
-                        {{ form.name| as_crispy_field }}
-                        {{ form.type| as_crispy_field}}
-                        {{ form.priority| as_crispy_field}}
-                        {{ form.description| as_crispy_field}}
-                        {{ form.story_point| as_crispy_field}}
-                        {{ form.tags| as_crispy_field}}
-                        {{ form.stage | as_crispy_field}}
-                    </div>
-                </div>
-
-                <!-- Modal Footer -->
-                <div class="modal-footer">
-                    <!-- Action button -->
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                    <button type="submit" class="btn btn-primary" id="saveChanges">Save changes</button>
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
+{% include "project_task/pb_create_new_task.html" %}
 
 <!-- Delete Confirmation Modal -->
 <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel"
@@ -150,6 +63,7 @@
                 Are you sure you want to delete this task?
             </div>
             <div class="modal-footer">
+                {% csrf_token %}
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
                 <a href="#" id="confirmDelete" class="btn btn-danger">Delete</a>
             </div>
@@ -160,8 +74,6 @@
 {% endblock %}
 
 {% block js %}
-<!-- JavaScript Libraries -->
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 <!-- Custom JavaScript -->
 <script>
@@ -233,7 +145,7 @@
 
     $(document).ready(function () {
 
-        // Initialize Select2 for Tags multiselect input
+        // Initialize Select2 for Create new task Tags multiselect input
         $('#id_tags').select2({
             tags: true,
             tokenSeparators: [','],
@@ -290,25 +202,28 @@
          * @param {Object} task - The task data.
          */
         function addTaskToUI(task) {
+
+            // Construct the HTML for the tags
             let tagsHtml = '';
             task.tags.forEach(tag => {
                 tagsHtml += `<span class="badge badge-info m-1">${tag}</span>`;
             });
 
-            // HTML for list view
+            // Construct HTML for list view
             const listViewHtml = `
-                <tr>
+                <tr id="task-row-{{ task.id }}">
                     <td>${task.name}</td>
                     <td>${task.story_point}</td>
                     <td>${task.priority}</td>
                     <td>${tagsHtml}</td>
                     <td><a href="/delete_task/${task.id}/" class="btn btn-danger delete-btn">Delete</a></td>
                 </tr>`;
+            // Append the new task to the table UI
             $('#backlogTable').append(listViewHtml);
 
-            // HTML for card view
+            // Construct HTML for card view
             const cardViewHtml = `
-                <div class="col-sm-3">
+                <div class="col-sm-3" id="task-card-{{ task.id }}">
                     <div class="card mb-3" style="height: 13rem;">
                         <div class="card-body">
                             <h4 class="card-title">${task.name}</h4>
@@ -326,7 +241,40 @@
                         </div>
                     </div>
                 </div>`;
+            // Append the new task to the card view UI
             $('#cardView .row').append(cardViewHtml);
+
+            // Remove the empty message if it exists
+            addOrRemoveEmptyUI();
+        }
+
+        /**
+         * Handle adding or deleting the empty UI message.
+         */
+        function addOrRemoveEmptyUI(){
+            // Check if there are any task rows left
+            const remainingTasks = $('#backlogTable tr[id^="task-row-"]');
+            if (remainingTasks.length === 0) {
+                // Construct HTML for empty card view
+                const cardViewHtml =
+                    `<div class="col-12 text-center" id="task-card-empty">
+                        <p class="mt-5">No tasks available.</p>
+                    </div>`;
+                // Append the new task to the card view UI
+                $('#cardView .row').append(cardViewHtml);
+
+                // Construct HTML for list view
+                const listViewHtml =
+                    `<tr id="task-row-empty">
+                        <td colspan="6" class="text-center">No tasks available.</td>
+                    </tr>`;
+                // Append the new task to the table UI
+                $('#backlogTable').append(listViewHtml);
+            } else {
+                // Remove the empty message if it exists
+                $('#task-row-empty').remove();
+                $('#task-card-empty').remove();
+            }
         }
 
         /**
@@ -335,8 +283,10 @@
          */
         $(document).on('click', '.delete-btn', function (e) {
             e.preventDefault();
-            const deleteUrl = $(this).attr('href');
+            const taskId = $(this).data('task-id');
+            const deleteUrl = `/project-backlog/delete_task/${taskId}/`
             $('#confirmDelete').data('href', deleteUrl);
+            $('#confirmDelete').data('task-id', taskId);
             $('#deleteModal').modal('show');
         });
 
@@ -346,20 +296,38 @@
          */
         $('#confirmDelete').on('click', function (e) {
             e.preventDefault();
+
+            // Get the deleted URL from the data-href attribute of the #confirmDelete element
             const deleteUrl = $(this).data('href');
 
+            // Retrieve the CSRF token value from the rendered hidden input
+            const csrfToken = $('[name=csrfmiddlewaretoken]').val();
             // AJAX request to delete the task and update the UI
             $.ajax({
                 url: deleteUrl,
-                type: 'GET',
+                type: 'POST',
                 dataType: 'json',
+                headers: {
+                    'X-CSRFToken': csrfToken
+                },
                 success: function (response) {
                     $('#deleteModal').modal('hide');
-                    const taskElement = $('.delete-btn[href="' + deleteUrl + '"]').closest('tr, .col-sm-3');
-                    taskElement.remove();
+
+                    // Retrieve the task ID
+                    const taskId = $('#confirmDelete').data('task-id');
+
+                    // Remove the associated table row or card
+                    $('#task-row-' + taskId).remove();
+                    $('#task-card-' + taskId).remove();
+
+                    // Handle adding or removing the empty UI message
+                    addOrRemoveEmptyUI();
+
+                    // Display a success message to the user
                     displayMessage(response.status, response.message);
                 },
                 error: function (response) {
+                    // Display an error message to the user
                     displayMessage('danger', response.message);
                 }
             });
