--- a/project_management_app/project_task/templates/project_task/project_backlog.html
+++ b/project_management_app/project_task/templates/project_task/project_backlog.html
@@ -48,6 +48,9 @@
 <!-- Create New Task Modal -->
 {% include "project_task/pb_create_new_task.html" %}
 
+<!-- Edit Task Modal -->
+{% include "project_task/pb_edit_task.html" %}
+
 <!-- Delete Confirmation Modal -->
 <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel"
      aria-hidden="true">
@@ -113,7 +116,6 @@
         window.location.href = updatedURL;
     }
 
-
     /**
      * Update or add a parameter to the provided URL.
      * E.g., view=list_view&sort=asc
@@ -145,7 +147,7 @@
 
     $(document).ready(function () {
 
-        // Initialize Select2 for Create new task Tags multiselect input
+        // CreateNewTaskForm Tag field Select2 initialization
         $('#id_tags').select2({
             tags: true,
             tokenSeparators: [','],
@@ -154,7 +156,16 @@
             theme: 'bootstrap',
         });
 
-        // Initialize Select2 for Tags filter multiselect input
+        // EditTaskForm Tag field Select2 initialization
+        $('#editTask #id_tags').select2({
+            tags: true,
+            tokenSeparators: [','],
+            allowClear: true,
+            placeholder: 'Select tag(s)',
+            theme: 'bootstrap',
+        });
+
+        // View Tag Filter Tag field Select2 initialization
         $('#tags_filter').select2({
             tags: false,
             tokenSeparators: [','],
@@ -198,84 +209,47 @@
         });
 
         /**
-         * Add the provided task to the UI.
-         * @param {Object} task - The task data.
+         * Handle the form field population for editing a task.
+         * On success, update the UI with the selected task details.
          */
-        function addTaskToUI(task) {
+        $('#editTask').on('shown.bs.modal', function (event) {
+            event.preventDefault();
+            const taskId = $(event.relatedTarget).data('task-id');
+            const taskUrl = `/project-backlog/edit_task/${taskId}/`
 
-            // Construct the HTML for the tags
-            let tagsHtml = '';
-            task.tags.forEach(tag => {
-                tagsHtml += `<span class="badge badge-info m-1">${tag}</span>`;
+            // Now you can use taskId to fetch or display task details in the modal
+            $.ajax({
+                url: taskUrl,
+                type: 'GET',
+                dataType: 'json',
+                success: function(response) {
+                    const edit_task = response.task_data;
+                    const tags = edit_task.tags;
+
+                    // select the tags in the select2 field
+                    $('#editTask #id_tags option').each(function() {
+                        if(tags.includes($(this).text())) {
+                            $(this).prop('selected', true);
+                        }
+                    });
+                    // update the select2 field
+                    $('#editTask #id_tags').trigger('change');
+
+                    // Assuming the modal fields have IDs corresponding to the edit_task attributes
+                    $('#editTask #id_name').val(edit_task.name);
+                    $('#editTask #id_story_point').val(edit_task.story_point);
+                    $('#editTask #id_priority').val(edit_task.priority);
+                    $('#editTask #id_description').val(edit_task.description);
+                    $('#editTask #id_type').val(edit_task.type);
+                    $('#editTask #id_status').val(edit_task.status);
+                    $('#editTask #id_assignee').val(edit_task.assignee);
+                    $('#editTask #id_created_date').val(edit_task.created_date);
+                },
+                error: function() {
+                    // Handle any errors, e.g., display a message to the user
+                }
             });
-
-            // Construct HTML for list view
-            const listViewHtml = `
-                <tr id="task-row-{{ task.id }}">
-                    <td>${task.name}</td>
-                    <td>${task.story_point}</td>
-                    <td>${task.priority}</td>
-                    <td>${tagsHtml}</td>
-                    <td><a href="/delete_task/${task.id}/" class="btn btn-danger delete-btn">Delete</a></td>
-                </tr>`;
-            // Append the new task to the table UI
-            $('#backlogTable').append(listViewHtml);
-
-            // Construct HTML for card view
-            const cardViewHtml = `
-                <div class="col-sm-3" id="task-card-{{ task.id }}">
-                    <div class="card mb-3" style="height: 13rem;">
-                        <div class="card-body">
-                            <h4 class="card-title">${task.name}</h4>
-                            <h6 class="card-subtitle mb-2 text-muted"><strong>Story Point</strong>: ${task.story_point}</h6>
-                            <h6 class="card-subtitle mb-2 text-muted"><strong>Priority</strong>: ${task.priority}</h6>
-                            <div class="d-flex flex-wrap align-items-start">
-                                <h6 class="card-subtitle mb-2 text-muted mr-2 tags-container">
-                                    <strong>Tags</strong>: ${tagsHtml}
-                                    <span class="more-tags">...</span>
-                                </h6>
-                            </div>
-                        </div>
-                        <div class="card-footer">
-                            <a href="/delete_task/${task.id}/" class="btn btn-danger delete-btn">Delete</a>
-                        </div>
-                    </div>
-                </div>`;
-            // Append the new task to the card view UI
-            $('#cardView .row').append(cardViewHtml);
-
-            // Remove the empty message if it exists
-            addOrRemoveEmptyUI();
-        }
-
-        /**
-         * Handle adding or deleting the empty UI message.
-         */
-        function addOrRemoveEmptyUI(){
-            // Check if there are any task rows left
-            const remainingTasks = $('#backlogTable tr[id^="task-row-"]');
-            if (remainingTasks.length === 0) {
-                // Construct HTML for empty card view
-                const cardViewHtml =
-                    `<div class="col-12 text-center" id="task-card-empty">
-                        <p class="mt-5">No tasks available.</p>
-                    </div>`;
-                // Append the new task to the card view UI
-                $('#cardView .row').append(cardViewHtml);
-
-                // Construct HTML for list view
-                const listViewHtml =
-                    `<tr id="task-row-empty">
-                        <td colspan="6" class="text-center">No tasks available.</td>
-                    </tr>`;
-                // Append the new task to the table UI
-                $('#backlogTable').append(listViewHtml);
-            } else {
-                // Remove the empty message if it exists
-                $('#task-row-empty').remove();
-                $('#task-card-empty').remove();
-            }
-        }
+        });
 
         /**
          * Handle delete button clicks using event delegation.
@@ -352,6 +326,87 @@
                 $('.alert').fadeOut('slow');
             }, 3000);
         }
+
+        /**
+         * Add the provided task to the UI.
+         * @param {Object} task - The task data.
+         */
+        function addTaskToUI(task) {
+
+            // Construct the HTML for the tags
+            let tagsHtml = '';
+            task.tags.forEach(tag => {
+                tagsHtml += `<span class="badge badge-info m-1">${tag}</span>`;
+            });
+
+            // Construct HTML for list view
+            const listViewHtml = `
+                <tr id="task-row-{{ task.id }}">
+                    <td><a href="#" data-toggle="modal" data-target="#editTask" data-task-id="{{ task.id }}">${task.name}</a></td>
+                    <td>${task.story_point}</td>
+                    <td>${task.priority}</td>
+                    <td>${tagsHtml}</td>
+                    <td><a href="/delete_task/${task.id}/" class="btn btn-danger delete-btn">Delete</a></td>
+                </tr>`;
+            // Append the new task to the table UI
+            $('#backlogTable').append(listViewHtml);
+
+            // Construct HTML for card view
+            const cardViewHtml = `
+                <div class="col-sm-3" id="task-card-{{ task.id }}">
+                    <div class="card mb-3" style="height: 13rem;">
+                        <div class="card-body">
+                            <h4 class="card-title"><a href="#" data-toggle="modal" data-target="#editTask" data-task-id="{{ task.id }}">${task.name}</a></h4>
+                            <h6 class="card-subtitle mb-2 text-muted"><strong>Story Point</strong>: ${task.story_point}</h6>
+                            <h6 class="card-subtitle mb-2 text-muted"><strong>Priority</strong>: ${task.priority}</h6>
+                            <div class="d-flex flex-wrap align-items-start">
+                                <h6 class="card-subtitle mb-2 text-muted mr-2 tags-container">
+                                    <strong>Tags</strong>: ${tagsHtml}
+                                    <span class="more-tags">...</span>
+                                </h6>
+                            </div>
+                        </div>
+                        <div class="card-footer">
+                            <a href="/delete_task/${task.id}/" class="btn btn-danger delete-btn">Delete</a>
+                        </div>
+                    </div>
+                </div>`;
+            // Append the new task to the card view UI
+            $('#cardView .row').append(cardViewHtml);
+
+            // Remove the empty message if it exists
+            addOrRemoveEmptyUI();
+        }
+
+        /**
+         * Handle adding or deleting the empty UI message.
+         */
+        function addOrRemoveEmptyUI(){
+            // Check if there are any task rows left
+            const remainingTasks = $('#backlogTable tr[id^="task-row-"]');
+            if (remainingTasks.length === 0) {
+                // Construct HTML for empty card view
+                const cardViewHtml =
+                    `<div class="col-12 text-center" id="task-card-empty">
+                        <p class="mt-5">No tasks available.</p>
+                    </div>`;
+                // Append the new task to the card view UI
+                $('#cardView .row').append(cardViewHtml);
+
+                // Construct HTML for list view
+                const listViewHtml =
+                    `<tr id="task-row-empty">
+                        <td colspan="6" class="text-center">No tasks available.</td>
+                    </tr>`;
+                // Append the new task to the table UI
+                $('#backlogTable').append(listViewHtml);
+            } else {
+                // Remove the empty message if it exists
+                $('#task-row-empty').remove();
+                $('#task-card-empty').remove();
+            }
+        }
+
     });
 </script>
 {% endblock %}
